  - adds ajax-based navigation in calendar, news items & blog posts to prevent reloading entire page
  - adds 'grouping by date' for uncategorized portfolio & file download items (in addition to 'grouping by alpha' for rolodex feature)
  - adds new 'headline' view to filedownloads module
  - adds new 'toggle' and 'accordion' views to the text module
  - adds custom module phrase translation libraries feature
  - adds a mass mailer for super admins to email all users or selected site users
  - updates file manager with 'virtual folder' grouping and date features to assist locating files
  - updates file uploader to allow html5 drag/drop support

Added / Fixed / changed for 2.1.0
-----------------------
# This release focuses on new calendar module and a 'mega' menu
  - adds optional nested comments, and optional per-item comment disabling
  - adds optional comments to filedownload module items
  - adds optional external file url for file download item
  - removes extra themes to reduce size of package, available as separate addon downloads
  - adds version change information to initial upgrade page
  - adds optional color/style to categories
  - upgrades calendar to a 2.0 event controller with categories & tags
    -- optionally upgrades and converts existing calendars
    -- adds color-coded categories and tags
    -- adds color-coded aggregation of external Google & iCal calendars, and online event registrations
  - adds new 'mega-menu' navigation view with new free-form page/menu type for embedding modules
  - adds random sorting/sequence to photo album/slideshows
  - adds optional user selectable email destination on form submission
  - adds new built-in database manager
  - plus many, many other tweaks, fixes, and features

Added / Fixed / changed for 2.0.9
-----------------------
# This release focuses on greater HTML5 & PHP v5.4 compliance, & module upgrades
  - upgrades old school simple poll and navigation modules into 2.0 style controllers