@@ -18,7 +18,8 @@
 {/css}
 
 {if $loggedin == true || $smarty.const.PREVIEW_READONLY == 1}
-	<div class="login logout">
-		<a class="awesome {$smarty.const.BTN_COLOR} {$smarty.const.BTN_SIZE}" href="{link action=logout}">{'Logout'|gettext}</a>
-	</div>
+    <div class="login logout">
+        <a class="awesome {$smarty.const.BTN_COLOR} {$smarty.const.BTN_SIZE}"
+           href="{link action=logout}">{'Logout'|gettext}</a>
+    </div>
 {/if}	
