@@ -20,21 +20,22 @@
 <div class="module login stacked">
     {if $moduletitle && !$config.hidemoduletitle}<h2>{$moduletitle}</h2>{/if}
     {if $config.moduledescription != ""}
-       {$config.moduledescription}
+        {$config.moduledescription}
     {/if}
     {if $loggedin == false}
-		<div>
-			{form action=login}
-				{control type="text" name="username" label="Username"|gettext|cat:":" size=25}
-				{control type="password" name="password" label="Password"|gettext|cat:":" size=25}
-				{control type="buttongroup" submit="Login Now"|gettext|cat:"!"}
-			{/form}
-		</div>
-	{else}
-		<h2>{$displayname}</h2>
-		<div class="logout">
-            <a class="awesome {$smarty.const.BTN_COLOR} {$smarty.const.BTN_SIZE}" href="{link action=logout}">{"Log Out"|gettext}</a>
-		</div>
+        <div>
+            {form action=login}
+            {control type="text" name="username" label="Username"|gettext|cat:":" size=25}
+            {control type="password" name="password" label="Password"|gettext|cat:":" size=25}
+            {control type="buttongroup" submit="Login Now"|gettext|cat:"!"}
+            {/form}
+        </div>
+    {else}
+        <h2>{$displayname}</h2>
+        <div class="logout">
+            <a class="awesome {$smarty.const.BTN_COLOR} {$smarty.const.BTN_SIZE}"
+               href="{link action=logout}">{"Log Out"|gettext}</a>
+        </div>
     {/if}
 </div>
 
